--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -9,7 +9,7 @@
       <div class="shortcode_title">
         <h1>Создание страницы</h1>
       </div>
-      <form th:action="@{/create}" method="post" class="contact_form">
+      <form th:action="@{'/' + ${username} + '/create'}" method="post" class="contact_form">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Заголовок" th:name="title">
         </div>
