--- a/src/main/resources/templates/fragments/layout-header.html
+++ b/src/main/resources/templates/fragments/layout-header.html
@@ -300,7 +300,7 @@
                     <th:block layout:fragment="content-control" />
                 </div>
                 <div class="col-sm-2">
-                    <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
+                    <a href="#" th:text="'Обновлено ' + ${#dates.format(currentArticle.date, 'dd MMMM, yyyy')}" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
                 </div>
             </div>
         </div>
