--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -37,7 +37,7 @@
                                         <a th:href="@{'/' + ${#authentication.name} + '/home'}" class="nav-link"><img src="/img/side-nav/account.png" alt="">Моя библиотека</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link"><img src="/img/side-nav/briefcase.png" alt="">Аккаунт</a>
+                                        <a data-toggle="modal" data-target="#account" class="nav-link"><img src="/img/side-nav/briefcase.png" alt="">Аккаунт</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="/logout" class="nav-link"><img src="/img/side-nav/users.png" alt="">Выйти<i class="arrow_right"></i></a>
@@ -67,6 +67,7 @@
     <th:block th:replace="~{fragments/layout-footer :: footer}"/>
 </div>
 <th:block th:replace="~{fragments/modal :: modal}"/>
+<th:block th:replace="~{account :: account}"/>
 <th:block th:replace="~{fragments/scripts :: layout-scripts}"/>
 <th:block layout:fragment="optional" />
 </body>
